added HTTP API endpoints to connect and disconnect nodes
